feat: basic JWT routes protection
