# docs/swagger.yaml
@@ -1,4 +1,3 @@
-basePath: /
 definitions:
   requests.LoginUserRequestDto:
     properties:
@@ -26,9 +25,7 @@ definitions:
     type: object
   responses.LoginUserResponseDto:
     properties:
-      email:
-        type: string
-      id:
+      accessToken:
         type: string
     type: object
   responses.UserResponseDto:
@@ -42,8 +39,8 @@ definitions:
     type: object
 info:
   contact: {}
-  description: Fiber backend template
-  title: Fiber BE Template API
+  description: This is a sample API with JWT auth.
+  title: Fiber API
   version: "1.0"
 paths:
   /api/auth/login:
@@ -119,6 +116,8 @@ paths:
             items:
               $ref: '#/definitions/responses.UserResponseDto'
             type: array
+      security:
+      - BearerAuth: []
       summary: Get all users
       tags:
       - users
@@ -157,6 +156,8 @@ paths:
             additionalProperties:
               type: string
             type: object
+      security:
+      - BearerAuth: []
       summary: Get a user by ID
       tags:
       - users
@@ -194,6 +195,8 @@ paths:
             additionalProperties:
               type: string
             type: object
+      security:
+      - BearerAuth: []
       summary: Get a user by email
       tags:
       - users
@@ -231,4 +234,10 @@ paths:
       summary: Register a new user
       tags:
       - users
+securityDefinitions:
+  BearerAuth:
+    description: 'Enter: "Bearer <your JWT token>"'
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
